[package]
name = "impl-more"
version = "0.1.3"
description = "Concise, declarative trait implementation macros"
authors = ["Rob Ede <robjtede@icloud.com>"]
keywords = ["derive", "implement", "implementations", "no-std"]
categories = ["development-tools", "no-std"]
repository = "https://github.com/robjtede/impl-more.git"
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.56"

[features]
default = ["std"]
std = []

[dependencies]

[dev-dependencies]
static_assertions = "1.1"
