[package]
name = "impl-more"
version = "0.3.0"
description = "Concise, declarative trait implementation macros"
authors = ["Rob Ede <robjtede@icloud.com>"]
keywords = ["derive", "implement", "implementations", "no-std"]
categories = ["development-tools", "no-std"]
repository = "https://github.com/robjtede/impl-more"
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.58"

[dependencies]

[dev-dependencies]
eyre = "0.6"
rustversion = "1"
static_assertions = "1.1"

[lints]
workspace = true
